webapp/src/view/chart-wizard/style.scss
.chart-wizard {
  max-width: 1230px;
  width: 100%;
  margin: 20px auto;
}

.chart-wizard__step-list {
  width: 25%;
  min-width: 250px;
  margin: 0;
  display: inline-block;
}

.chart-wizard__step {
  list-style: none;
  border: 1px solid #ccc;
  border-bottom: none;

  &:last-child {
    border-bottom: 1px solid #ccc;
  }

  h2 {
    background: #fff;
    padding: 5px 10px;
    margin: 0;
    font-size: 16px;
    cursor: pointer;

    .fa {
      float: right;
      font-size: 20px;
      line-height: 28px;
    }
  }

  .chart-wizard__expandable {
    display: none;
    position: relative;
    min-height: 300px;
    padding: 10px 10px 80px;
  }

  &.active {
    h2 {
      background: #436380;
      color: #fff;
    }

    .chart-wizard__expandable {
      display: block;
    }
  }
}

.preview-screen {
  width: 70%;
  display: inline-block;
  margin-left: 2%;
  vertical-align: top;

  h1 {
    background: #436380;
    color: #fff;
    margin: 0 0 40px 0;
    padding: 5px 10px;
  }
}

.chart-wizard__save,
.chart-wizard__cancel,
.chart-wizard__next {
  display: block;
  margin: 10px 0;
  text-align: center;
  text-transform: uppercase;
  background: #344b61;
  font-size: 14px;
  color: #fff;
  cursor: pointer;
  &:hover {
    background: #426281;
  }
}

.chart-wizard__cancel {
  width: 250px;
  padding: 20px;
}

.chart-wizard__save {
  padding: 20px;
}

.chart-wizard__next {
  width: 100px;
  padding: 10px;
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.chart-wizard__para {
  font-size: 14px;
  line-height: 16px;
  margin: 0 0 15px;
}

.chart-select {
  padding: 0 25px;

  .chart-box-wrapper {
    padding: 10px;
    display: inline-block;
    margin: 0;

    .chart-box {
      border-radius: 5px;
      text-align: center;
      padding: 5px 8px;
      cursor: pointer;
      opacity: 0.6;
    }

    .chart-icon {
      width: 80px;
      display: block;
      text-align: center;
    }

    &.active {
      background-color: #436380;
      color: #fff;
      .chart-box {
        opacity: 1.0;
      }
    }

    &:hover:not(.active) {
      background-color: lighten(#436380, 50%);
      .chart-box {
        opacity: 1.0;
      }
    }
  }
}

